Fixed loading skip upon cropper creation

--- a/css/face-morphing.css
+++ b/css/face-morphing.css
@@ -39,11 +39,3 @@
 img {
   max-width: 100%;
 }
-
-.cropper-crop-box {
-  background-color: white;
-}
-
-.cropper-container {
-  display: none;
-}
